--- a/src/Calculator/Views/StandardCalculatorControl.xaml
+++ b/src/Calculator/Views/StandardCalculatorControl.xaml
@@ -4,9 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Calculator.Views"
+             xmlns:vm="clr-namespace:Calculator.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="460" d:DesignWidth="320">
 
+    <UserControl.DataContext>
+        <vm:StandardCalculatorViewModel/>
+    </UserControl.DataContext>
+    
     <UserControl.Resources>
         <Style x:Key="MemoryButtonsGrid" TargetType="Grid">
             <Style.Resources>
@@ -44,7 +49,7 @@
 
             <!--Current expression-->
             <TextBlock
-                Text="0"
+                Text="{Binding CurrentExpression}"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Center"
                 FontFamily="{StaticResource CalcMDL2}"
@@ -55,10 +60,10 @@
             <!--Current number-->
             <Viewbox Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top">
                 <TextBox 
-                    Text="0"
+                    Text="{Binding CurrentNumber}"
                     IsReadOnly="True"
-                    FontFamily="Microsoft JhengHei"
-                    FontWeight="Bold"
+                    MaxLength="16"
+                    FontFamily="{StaticResource CalcMDL2}"
                     BorderThickness="0"
                     Background="{StaticResource CurrentNumber.Static.Background}"/>
             </Viewbox>
@@ -94,15 +99,15 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
 
-                    <Button Content="MC" Command="" Grid.Column="0"/>
-                    <Button Content="MR" Command="" Grid.Column="1"/>
-                    <Button Content="M+" Command="" Grid.Column="2"/>
-                    <Button Content="M-" Command="" Grid.Column="3"/>
-                    <Button Content="MS" Command="" Grid.Column="4"/>
+                    <Button Content="MC" Command="{Binding MemoryClearCommand}" Grid.Column="0"/>
+                    <Button Content="MR" Command="{Binding MemoryReadCommand}" Grid.Column="1"/>
+                    <Button Content="M+" Command="{Binding MemoryPlusCommand}" Grid.Column="2"/>
+                    <Button Content="M-" Command="{Binding MemoryMinusCommand}" Grid.Column="3"/>
+                    <Button Content="MS" Command="{Binding MemorySaveCommand}" Grid.Column="4"/>
                 </Grid>
 
                 <!--Memory history-->
-                <Button IsEnabled="False" Content="Mˇ" Command="" Grid.Column="2"/>
+                <Button Content="Mˇ" Command="{Binding MemoryHistoryCommand}" Grid.Column="2"/>
             </Grid>
 
             <!--Main keyboard-->
@@ -124,25 +129,23 @@
                 </Grid.RowDefinitions>
 
                 <!--#region Additional operations-->
-                <Button Content="%" Command="" Grid.Column="0" Grid.Row="0"/>
-                <Button Content="CE" Command="" Grid.Column="1" Grid.Row="0"/>
-                <Button Content="C" Command="" Grid.Column="2" Grid.Row="0"/>
-                <Button Content="⌫" Command="" Grid.Column="3" Grid.Row="0"/>
-                <Button Content="1/x" Command="" Grid.Column="0" Grid.Row="1"/>
-                <Button Content="x²" Command="" Grid.Column="1" Grid.Row="1"/>
-                <Button Content="√x" Command="" Grid.Column="2" Grid.Row="1"/>
+                <Button Content="%" Command="{Binding FindPercentageCommand}" Grid.Column="0" Grid.Row="0"/>
+                <Button Content="CE" Command="{Binding ClearEntryCommand}" Grid.Column="1" Grid.Row="0"/>
+                <Button Content="C" Command="{Binding ClearCommand}" Grid.Column="2" Grid.Row="0"/>
+                <Button Content="⌫" Command="{Binding BackspaceCommand}" Grid.Column="3" Grid.Row="0"/>
+                <Button Content="1/x" Command="{Binding PartOfTheWholeCommand}" Grid.Column="0" Grid.Row="1"/>
+                <Button Content="x²" Command="{Binding SquaredNumberCommand}" Grid.Column="1" Grid.Row="1"/>
+                <Button Content="√x" Command="{Binding SqrtCommand}" Grid.Column="2" Grid.Row="1"/>
                 <!--#endregion -->
 
-                <!--#region Arithmetic operations-->
-                <Button Content="÷" Command="" Grid.Column="3" Grid.Row="1" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
-                <Button Content="×" Command="" Grid.Column="3" Grid.Row="2" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
-                <Button Content="‒" Command="" Grid.Column="3" Grid.Row="3" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
-                <Button Content="+" Command="" Grid.Column="3" Grid.Row="4" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
+                <!--#region Basic math operations-->
+                <Button Content="÷" Command="{Binding DivisionCommand}" Grid.Column="3" Grid.Row="1" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
+                <Button Content="×" Command="{Binding MultiplyCommand}" Grid.Column="3" Grid.Row="2" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
+                <Button Content="‒" Command="{Binding SubtractionCommand}" Grid.Column="3" Grid.Row="3" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
+                <Button Content="+" Command="{Binding AdditionCommand}" Grid.Column="3" Grid.Row="4" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
+                <Button Content="=" Command="{Binding EquallyCommand}" Grid.Column="3" Grid.Row="5" Style="{StaticResource ResultButtonStyle}"/>
                 <!--#endregion -->
-
-                <!--Result button-->
-                <Button Content="=" Command="" Grid.Column="3" Grid.Row="5" Style="{StaticResource ResultButtonStyle}"/>
-
+                
                 <!--Number pad-->
                 <Grid Grid.Row="2" Grid.ColumnSpan="3" Grid.RowSpan="4" Style="{StaticResource NumberPadGrid}">
                     <Grid.ColumnDefinitions>
@@ -158,18 +161,18 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <Button Content="0" Command="" Grid.Column="1" Grid.Row="3"/>
-                    <Button Content="1" Command="" Grid.Column="0" Grid.Row="2"/>
-                    <Button Content="2" Command="" Grid.Column="1" Grid.Row="2"/>
-                    <Button Content="3" Command="" Grid.Column="2" Grid.Row="2"/>
-                    <Button Content="4" Command="" Grid.Column="0" Grid.Row="1"/>
-                    <Button Content="5" Command="" Grid.Column="1" Grid.Row="1"/>
-                    <Button Content="6" Command="" Grid.Column="2" Grid.Row="1"/>
-                    <Button Content="7" Command="" Grid.Column="0" Grid.Row="0"/>
-                    <Button Content="8" Command="" Grid.Column="1" Grid.Row="0"/>
-                    <Button Content="9" Command="" Grid.Column="2" Grid.Row="0"/>
-                    <Button Content="+/-" Command="" Grid.Column="0" Grid.Row="3"/>
-                    <Button Content="," Command="" Grid.Column="2" Grid.Row="3"/>
+                    <Button Content="0" Command="{Binding NumberZeroCommand}" Grid.Column="1" Grid.Row="3"/>
+                    <Button Content="1" Command="{Binding NumberOneCommand}" Grid.Column="0" Grid.Row="2"/>
+                    <Button Content="2" Command="{Binding NumberTwoCommand}" Grid.Column="1" Grid.Row="2"/>
+                    <Button Content="3" Command="{Binding NumberThreeCommand}" Grid.Column="2" Grid.Row="2"/>
+                    <Button Content="4" Command="{Binding NumberFourCommand}" Grid.Column="0" Grid.Row="1"/>
+                    <Button Content="5" Command="{Binding NumberFiveCommand}" Grid.Column="1" Grid.Row="1"/>
+                    <Button Content="6" Command="{Binding NumberSixCommand}" Grid.Column="2" Grid.Row="1"/>
+                    <Button Content="7" Command="{Binding NumberSevenCommand}" Grid.Column="0" Grid.Row="0"/>
+                    <Button Content="8" Command="{Binding NumberEightCommand}" Grid.Column="1" Grid.Row="0"/>
+                    <Button Content="9" Command="{Binding NumberNineCommand}" Grid.Column="2" Grid.Row="0"/>
+                    <Button Content="+/-" Command="{Binding InvertSignCommand}" Grid.Column="0" Grid.Row="3"/>
+                    <Button Content="," Command="{Binding CommaCommand}" Grid.Column="2" Grid.Row="3"/>
                 </Grid>
             </Grid>
         </Grid>
