--- a/src/Calculator/Views/StandardCalculatorControl.xaml
+++ b/src/Calculator/Views/StandardCalculatorControl.xaml
@@ -134,7 +134,7 @@
                 <Button Content="C" Command="{Binding ClearCommand}" Grid.Column="2" Grid.Row="0"/>
                 <Button Content="⌫" Command="{Binding BackspaceCommand}" Grid.Column="3" Grid.Row="0"/>
                 <Button Content="1/x" Command="{Binding PartOfTheWholeCommand}" Grid.Column="0" Grid.Row="1"/>
-                <Button Content="x²" Command="{Binding SquaredNumberCommand}" Grid.Column="1" Grid.Row="1"/>
+                <Button Content="x²" Command="{Binding SqrCommand}" Grid.Column="1" Grid.Row="1"/>
                 <Button Content="√x" Command="{Binding SqrtCommand}" Grid.Column="2" Grid.Row="1"/>
                 <!--#endregion -->
 
